Refactoring and Bug Squashing

--- a/scriptures.redo/menu.css
+++ b/scriptures.redo/menu.css
@@ -2,8 +2,8 @@ html {
 	font-family: sans;
 	font-size: 150%;
 	text-decoration: none;
-	background: black;
-	color: white;
+	background: white;
+	color: black;
 }
 
 a:link {
